Fix invisible text, oops!

--- a/_sass/2017/base/base.scss
+++ b/_sass/2017/base/base.scss
@@ -74,7 +74,7 @@ a:hover {
  * Hide markdown before it's wrapped.
  */
 
-html.WithJs .MarkdownBody {
+html.WithJs .post-content {
   & {
     opacity: 0;
   }
